# OxIced

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-2-link  flake-profile-7-link
src/: any_send.rs  lib.rs  main.rs  mains.rs  theme.rs
src/theme/: legacy_theme.rs  mod.rs  theme.rs  theme_impl.rs
src/tools/: mod.rs  palette.rs  test_app.rs
src/utils/: color.rs  file.rs  mod.rs
src/widgets/: common.rs  mod.rs  oxi_button.rs  oxi_card.rs  oxi_checkbox.rs  oxi_icon.rs  oxi_layer.rs  oxi_picklist.rs  oxi_progress.rs  oxi_radio.rs  oxi_rule.rs  oxi_slider.rs  oxi_svg.rs  oxi_text.rs  oxi_text_input.rs  oxi_toggler.rs  toggler_anim.rs
