[package]
name = "oxiced"
description = "An iced themeing library"
version = "0.5.1"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "canvas", "svg"] }
# 13 is completely broken
iced_layershell = "0.12.0"
once_cell = "1.21.3"
optional_struct = "0.5.2"
serde = "1.0.219"
toml = "0.8.22"
xdg = "3.0.0"
