[package]
name = "oxiced"
description = "An iced themeing library"
version = "0.5.1"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"canvas",
	"image",
	"svg",
	"tokio",
], git = "https://github.com/iced-rs/iced" }

iced_layershell = { version = "0.14.0-dev", git = "https://github.com/waycrate/exwlshelleventloop" }
lilt = "0.8.1"

# 13 is completely broken
once_cell = "1.21.3"
optional_struct = "0.5.2"
serde = "1.0.219"
toml = "0.9.5"
xdg = "3.0.0"
